--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>Inventory System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='media/inventory.ico') }}">
     <style>
         body { background-color: #121212; color: #ffffff; }
         
